# polyLaplace

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: clang-format.cmake
data/: bigguyhalf.off  dual_hemisphere.off  fertility.off  suzanne-half.off
data/showcase_models/: dual_Bunny.off
data/surface_meshes/grid/: triangle_reg1.off  triangle_reg2.off  triangle_reg3.off  triangle_reg4.off  triangle_reg5.off
data/surface_meshes/sphere/: hex2_noise_1.off  hex2_noise_2.off  hex2_noise_3.off  hex2_noise_4.off  hex2_noise_5.off  hex2_noise_6.off  hex2_noise_7.off  hex2_noise_8.off  hex_noise_1.off  hex_noise_2.off  hex_noise_3.off  hex_noise_4.off  hex_noise_5.off
data/volume_meshes/cubes/: cube_hexahedron_1.ovm  cube_hexahedron_2.ovm  cube_hexahedron_3.ovm  cube_hexahedron_4.ovm  cube_pyramids_1.ovm  cube_pyramids_2.ovm  cube_pyramids_3.ovm  cube_pyramids_4.ovm  cube_tet_1.ovm  cube_tetrahedron_1.ovm  cube_tetrahedron_2.ovm  cube_tetrahedron_4.ovm  cube_truncated_1.ovm  cube_truncated_2.ovm  cube_truncated_3.ovm  cube_truncated_4.ovm  cube_voronoi_1.ovm  cube_voronoi_2.ovm  cube_voronoi_3.ovm  cube_voronoi_4.ovm  cube_voronoi_5.ovm  noisycube.ovm
data/volume_meshes/unit_balls/: Hexahedral_sphere.ovm
src/: CMakeLists.txt  SurfaceViewer.cpp  SurfaceViewer.h  VolumeViewer.cpp  VolumeViewer.h  common_util.h  main.cpp  poly_demo.cpp  poly_parameterization.cpp  run_surface_convergence.cpp  run_surface_tests.cpp  run_timings.cpp  run_volume_tests.cpp  surface_viewer_main.cpp  timings_surface.cpp  timings_volume.cpp  volume_viewer_main.cpp
src/Basis_visualization/: CMakeLists.txt  MyShader.cpp  MyShader.h  MySurfaceMeshGL.cpp  MySurfaceMeshGL.h  MyViewer.cpp  MyViewer.h  PhongTessShader.h  main.cpp
src/Harmonic/: GaussQuadrature.cpp  GaussQuadrature.h  GaussRules2d.h  Geometry.cpp  Geometry.h  HarmonicPolygon.cpp  HarmonicPolygon.h  HarmonicPolyhedron.cpp  HarmonicPolyhedron.h  PolygonSampler.cpp  PolygonSampler.h  PolyhedralMesh.cpp  PolyhedralMesh.h  Tetrahedralize.cpp  Tetrahedralize.h  ThreadTools.h  WriteTetOVM.cpp  WriteTetOVM.h
src/HarmonicBase3D2D/: GaussQuadrature.cpp  GaussQuadrature.h  GaussRules2d.h  Geometry.cpp  Geometry.hpp  HarmonicPolygon.cpp  HarmonicPolygon.hpp  HarmonicPolyhedron.cpp  HarmonicPolyhedron.hpp  PolygonSampler.cpp  PolygonSampler.hpp  PolyhedralMesh.cpp  PolyhedralMesh.hpp  Tetrahedralize.cpp  Tetrahedralize.hpp  ThreadTools.h  WriteTetOVM.cpp  WriteTetOVM.hpp  samples.inl  tetgen.cpp
src/Surface/: AQAPoly_Laplacian.cpp  AQAPoly_Laplacian.h  Curvature.cpp  Curvature.h  DiamondLaplace_2D.cpp  DiamondLaplace_2D.h  Diamond_2D.cpp  Diamond_2D.h  DisneyLaplace.cpp  DisneyLaplace.h  GeodesicsInHeat.cpp  GeodesicsInHeat.h  HarmonicBasis2D.cpp  HarmonicBasis2D.h  LaplaceConstruction.cpp  LaplaceConstruction.h  MyBasisShader.h  Parameterization.cpp  Parameterization.h  Poisson_System.cpp  Poisson_System.h  PolyLaplace.cpp  PolyLaplace.h  PolyRobustLaplace.cpp  PolyRobustLaplace.h  PolySimpleLaplace.cpp  PolySimpleLaplace.h  PolySmoothing.cpp  PolySmoothing.h  SECLaplace.cpp  SECLaplace.h  SmoothSubdivBasis.cpp  SmoothSubdivBasis.h  Smoothing.cpp  Smoothing.h  SpectralProcessing.cpp  SpectralProcessing.h  [AW11]Laplace.cpp  [AW11]Laplace.h  [dGBD20]Laplace.cpp  (+5 more)
src/Volume/: AQAPoly_Laplacian_3D.cpp  AQAPoly_Laplacian_3D.h  Diamond_3D.cpp  Diamond_3D.h  Eigenmodes.cpp  Eigenmodes.h  Franke_PoissonSystem_3D.cpp  Franke_PoissonSystem_3D.h  HarmonicBasis.cpp  HarmonicBasis.h  LaplaceConstruction_3D.cpp  LaplaceConstruction_3D.h  PolySimpleLaplace.cpp  PolySimpleLaplace.h  diffgeo_3D.cpp  diffgeo_3D.h
src/VolumeMesh/: CMakeLists.txt  PhongShader.h  VolumeMesh.cpp  VolumeMesh.h  VolumeMeshGL.cpp  VolumeMeshGL.h  VolumeMeshIO.cpp  VolumeMeshIO.h  VolumeMeshViewer.cpp  VolumeMeshViewer.h  VolumeSubdivision.cpp  VolumeSubdivision.h
